--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ matplotlib==3.7.2
 seaborn==0.12.2
 plotly==5.9.0
 scikit-learn==1.3.0
-wordcloud=1.9.2
+wordcloud==1.9.2
 nltk==3.8.1
 joblib==1.2.0
